--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "eslintConfig": {
+    "extends": "airbnb"
+  },
   "author": "",
   "license": "ISC"
 }
